# hms2osc

./: CHANGELOG.md  Cargo.toml  README.md  config.json
.github/workflows/: build.yml  release.yml
src/: config.json  hms2osc.rs  main.rs
