[package]
name = "hms2osc"
version = "0.1.0"
edition = "2021"
authors = ["miranda kastemaa <miranda@pulusound.fi>"]

[lib]
name = "hms2osc"
path = "src/hms2osc.rs"

[[bin]]
name = "hms2osc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colog = "1.3.0"
directories = "5.0"
huelib = "0.13"
log = "0.4.22"
rosc = "~0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"